feat: query all geocoding services